--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,11 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
 
     <!-- ng-view Angular directive is where the partials will be loaded. app.js configures the $routingProvider
     where you specify which partial should be loaded when. -->
-    <div ng-view>
+    <div class="container-fluid">
+      <div class="row">
+        <div ng-view>
+        </div>
+      </div>
     </div>
 
   </body>
